# ioda-plots

./: .gitignore  README.md  anim.py  binnedStats.py  binning.yaml  locations.py  plot.py  plot_all_hofx.py  regions.py  setup.cfg
src/iodaplots/: __init__.py  binning.py  plotting.py
test/: README.md  sst.yaml  test.sh
