[metadata]
name = iodaplots
version = 0.1
description = Binning and plotting tools for JEDI IODA files
author = JCSDA
author_email = tsluka@ucar.edu
url = ""

[options]
packages = find:
package_dir=
  =src
include_package_data = False
install_requires =
  cartopy
  click
  matplotlib
  netCDF4
  numpy
  pandas
  ruamel.yaml
  xarray

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  iodaplots = iodaplots.bin.ioda_plots:cli